// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-devTest dev 1`] = `
"const a = 10;
const b = 20;
console.log(a + b);
if ("TEST") {
  console.log("Hello World");
}"
`;

exports[`babel-plugin-devTest prod 1`] = `
"const a = 10;
const b = 20;
console.log(a + b);"
`;
